<b><u> v1.10, 07.12.2015</b></u>
<font color=#FF8C00>&#9830;</font> Misc: Add a versions check for ElvUI. If ElvUI is out of date = MerathilisUI don't load. ( So keep your ElvUI alway up to date D: )
<font color=#FF8C00>&#9830;</font> GameMenu: Remove an unused Function.
<font color=#FF8C00>&#9830;</font> Install: Fix a few install errors if ElvUI_SLE or AddOnSkins are not enable.
<font color=#FF8C00>&#9830;</font> Datatext: Add a MUI System Datatext. (Credits Lockslap - ElvUI_SystemDT)

<b><u> v1.09, 03.12.2015</b></u>
<font color=#FF8C00>&#9830;</font> Misc: Cached WoW API & Functions (I have no idea what i'm doing 2.0).
<font color=#FF8C00>&#9830;</font> Misc: Code cleanup.
<font color=#FF8C00>&#9830;</font> Bags: Add an Option to disable the forcing of the Bag-/Bank Frame position.
<font color=#FF8C00>&#9830;</font> Install: Adjust the Heal Layout Raid-/Party Mover.
<font color=#FF8C00>&#9830;</font> Install: Fix a few leftovers for the Portraits.

<b><u> v1.08, 25.11.2015</b></u>
<font color=#FF8C00>&#9830;</font> Install: Adjust the Position of the BossButton and setScale to 0.75. (Requires ElvUI 8.41)
<font color=#FF8C00>&#9830;</font> Install: Adjust the Position of the BuffMover a bit.
<font color=#FF8C00>&#9830;</font> Misc: Try to show Overwatch Icon for FriendAlert in Chat(not working yet).
<font color=#FF8C00>&#9830;</font> Misc: Code optimization.
<font color=#FF8C00>&#9830;</font> Misc: Delete LootAnnouncer (I use the one from S&L).
<font color=#FF8C00>&#9830;</font> Misc: Delete RareAlert (It's useless for me).
<font color=#FF8C00>&#9830;</font> Misc: Delete Tabbinder
<font color=#FF8C00>&#9830;</font> Misc: Cached WoW API & Functions (I have no idea what i'm doing).

<b><u> v1.07, 19.11.2015</b></u>
<font color=#FF8C00>&#9830;</font> Install: Adjust the StanceBar Mover a bit.
<font color=#FF8C00>&#9830;</font> Install: Change the statusbar spacing for VAT to -3.